# ACEest_Fitness

./: Jenkinsfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  pylint.yml
deployment/: flask-app-deployment.yaml
deployment/A-B_deployment/: service.yml  stable.yml
deployment/Blue-Green_deployment/: aceessfitness-blue.yaml  aceessfitness-green.yaml  aceessfitness-service.yaml
deployment/Canary_Deployment/: v1.yaml  v2.yaml
deployment/RollingUpdate_deployment/: rolling.yml  service.yml
deployment/Shadow_Deployment/: aceessfitness-service.yaml  aceessfitness-shadow.yaml  aceessfitness-stable.yaml
src/: app.py
src/templates/: add_workout.html  base.html  diet.html  diet_chart.html  diet_guide.html  index.html  layout.html  log_workouts.html  plan.html  progress.html  progress_tracker.html  summary.html  workout_chart.html  workout_plan.html
tests/: test_aceest_fitness.py
